--- a/Clash/config/ACL4SSR_Online_Full_AdblockPlus.ini
+++ b/Clash/config/ACL4SSR_Online_Full_AdblockPlus.ini
@@ -55,35 +55,35 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇭🇺 匈牙利节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇭🇺 匈牙利节点`[]🇹🇷 土耳其节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇭🇺 匈牙利节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=💬 Ai平台`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇭🇺 匈牙利节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=📽️ TilTok视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇭🇺 匈牙利节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇭🇺 匈牙利节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🎥 奈飞视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇭🇺 匈牙利节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇭🇺 匈牙利节点`[]🇹🇷 土耳其节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=💬 Ai平台`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇭🇺 匈牙利节点`[]🇹🇷 土耳其节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=📽️ TilTok视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇭🇺 匈牙利节点`[]🇹🇷 土耳其节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇭🇺 匈牙利节点`[]🇹🇷 土耳其节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🎥 奈飞视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇭🇺 匈牙利节点`[]🇹🇷 土耳其节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=📺 巴哈姆特`select`[]🇹🇼 台湾节点`[]🚀 节点选择`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🇹🇼 台湾节点`[]🇭🇰 香港节点
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇭🇺 匈牙利节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇭🇺 匈牙利节点`[]🇹🇷 土耳其节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇯🇵 日本节点`[]🚀 手动切换
-custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇭🇺 匈牙利节点`[]🚀 手动切换
-custom_proxy_group=Ⓜ️ 微软Bing`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇭🇺 匈牙利节点`[]🚀 手动切换
-custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇭🇺 匈牙利节点`[]🚀 手动切换
-custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇭🇺 匈牙利节点`[]🚀 手动切换
-custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇭🇺 匈牙利节点`[]🚀 手动切换
-custom_proxy_group=₿ Crypto`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇭🇺 匈牙利节点`[]🚀 手动切换
-custom_proxy_group=🇪🇺 EUService`select`[]DIRECT`[]🚀 节点选择`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇭🇺 匈牙利节点`[]🚀 手动切换
-custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇭🇺 匈牙利节点`[]🚀 手动切换
+custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇭🇺 匈牙利节点`[]🇹🇷 土耳其节点`[]🚀 手动切换
+custom_proxy_group=Ⓜ️ 微软Bing`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇭🇺 匈牙利节点`[]🇹🇷 土耳其节点`[]🚀 手动切换
+custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇭🇺 匈牙利节点`[]🇹🇷 土耳其节点`[]🚀 手动切换
+custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇭🇺 匈牙利节点`[]🇹🇷 土耳其节点`[]🚀 手动切换
+custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇭🇺 匈牙利节点`[]🇹🇷 土耳其节点`[]🚀 手动切换
+custom_proxy_group=₿ Crypto`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇭🇺 匈牙利节点`[]🇹🇷 土耳其节点`[]🚀 手动切换
+custom_proxy_group=🇪🇺 EUService`select`[]DIRECT`[]🚀 节点选择`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇭🇺 匈牙利节点`[]🇹🇷 土耳其节点`[]🚀 手动切换
+custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇭🇺 匈牙利节点`[]🇹🇷 土耳其节点`[]🚀 手动切换
 custom_proxy_group=🎶 网易音乐`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`(网易|音乐|解锁|Music|NetEase)
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇭🇺 匈牙利节点`[]🚀 手动切换
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇹🇼 台湾节点`[]🇸🇬 新加坡节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇭🇺 匈牙利节点`[]🇹🇷 土耳其节点`[]🚀 手动切换
 custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong|HKG)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan|Tokyo|NRT|KIX)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|ATL|BUF|DFW|EWR|IAD|LAX|MCI|MIA|ORD|PHX|PDX|SEA|SJC)`http://www.gstatic.com/generate_204`300,,150
@@ -92,6 +92,7 @@ custom_proxy_group=🇸🇬 新加坡节点`url-test`(新加坡|坡|狮城|SG|Si
 custom_proxy_group=🇩🇪 德国节点`url-test`(DE|Germany|KOR|德国|法兰克福)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇬🇧 英国节点`url-test`(GB|UK|英国|伦敦)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇺 匈牙利节点`url-test`(HU|HUN|Hungary|匈|布达佩斯)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇷 土耳其节点`url-test`(TR|Turkey|Türkiye|土耳其|伊斯坦布尔)`http://www.gstatic.com/generate_204`300,,50
 ;设置分组标志位
 
 enable_rule_generator=true
